--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TechFlow Landing Page</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
@@ -32,10 +33,10 @@
   <section class="features" id="features">
     <h2>Our Features</h2>
     <div class="features-grid">
-      <div class="feature-card">🚀 Fast Performance</div>
-      <div class="feature-card">🔒 Secure Systems</div>
-      <div class="feature-card">⚙️ Customizable</div>
-      <div class="feature-card">☁️ Cloud Integration</div>
+      <div class="feature-card">&#128640; Fast Performance</div>
+      <div class="feature-card">&#128274; Secure Systems</div>
+      <div class="feature-card">&#x2699; Customizable</div>
+      <div class="feature-card">&#9729; Cloud Integration</div>
     </div>
   </section>
 
@@ -62,9 +63,9 @@
       <div class="footer-section">
         <h3>Follow Us</h3>
         <div class="social-icons">
-          <a href="#">&Xopf;</a>
-          <a href="#">💼</a>
-          <a href="#">📷</a>
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-google"></a>
         </div>
       </div>
     </div>
